--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="container">
             <h2>Тайны звёзд в твоих руках: проект скачай — забудь про страх!</h2>
             <!-- Мы просто даем ссылке класс "main-btn" -->
-            <a href="https://github.com/Arina-M82/Dark-Matter/releases/download/v1.0/menu.exe" download="SuperGame.exe" class="main-btn">
+            <a href="https://github.com/Arina-M82/Dark-Matter/releases/download/v1.0/menu.exe"  class="main-btn">
                 СКАЧАТЬ ИГРУ
             </a>
         </div>
@@ -216,3 +216,4 @@
 </body>
 
 </html>
+
