--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
                 <ul>
                     <li>7 уникальных уровней (от экзопланет до квантовых монстров).</li>
                     <li>Псевдо 3д</li>
-                    <li>Более 2 000 строчек кода</li>
+                    <li>БОЛЕЕ 3 000 СТРОЧЕК КОДА</li>
+                    <li>Гибридная 2D и 3D графика.</li>
+                    <li>Частицы</li>
+                    <li>Фото и видео</li>
                     <li>Гибридная 2D и 3D графика.</li>
                     <li>Научно достоверные данные на базе исследований NASA.</li>
                 </ul>
@@ -216,4 +219,5 @@
 </body>
 
 </html>
+
 
