--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@
             <a href="https://github.com/Arina-M82/Dark-Matter/releases/download/v1.0/menu.exe" download="SuperGame.exe" class="main-btn">
                 СКАЧАТЬ ИГРУ
             </a>
+            </a>
+            <a href="https://github.com/Arina-M82/Dark_Matter_Projekt" class="main-btn">
+                ссылка на GitHub
+            </a>
         </div>
     </section>
 
@@ -217,4 +221,5 @@
         </div>
     </footer>
 </body>
+
 </html>
