--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="container">
             <h2>Тайны звёзд в твоих руках: проект скачай — забудь про страх!</h2>
             <!-- Мы просто даем ссылке класс "main-btn" -->
-            <a href="https://github.com/Arina-M82/Dark-Matter/releases/download/v1.0/menu.exe" download="SuperGame.exe" class="main-btn">
+            <a href="https://github.com/Arina-M82/Dark-Matter/releases/download/v1.0/default.exe" download="SuperGame.exe" class="main-btn">
                 СКАЧАТЬ ИГРУ
             </a>
             </a>
@@ -223,3 +223,4 @@
 </body>
 
 </html>
+
